--- a/applications/hello_zephyr/CMakeLists.txt
+++ b/applications/hello_zephyr/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.13.1)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-project(hello_world)
+project(hello_zephyr)
 
 target_sources(app PRIVATE src/main.c)
 
