--- a/applications/hello_zephyr/prj.conf
+++ b/applications/hello_zephyr/prj.conf
@@ -5,8 +5,7 @@ CONFIG_SHELL_BACKEND_SERIAL=y
 CONFIG_SHELL_PROMPT_UART="shell>"
 
 #Sample shell optons.
-CONFIG_SHELL_BACKEND_SERIAL_INTERRUPT_DRIVEN=n
-CONFIG_SHELL_STACK_SIZE=4046
+CONFIG_SHELL_STACK_SIZE=4096
 CONFIG_SHELL_ECHO_STATUS=y
 CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_METAKEYS=y
@@ -25,8 +24,14 @@ CONFIG_LOG_CMDS=y
 CONFIG_KERNEL_SHELL=y
 CONFIG_THREAD_MONITOR=y
 
-#add a reboot command
+#Add a reboot command
 CONFIG_REBOOT=y
 
 #Add the cow command as a module
 CONFIG_COW=y
+
+#Disable optimizations for easier debug.  Increase stack sizes
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
+CONFIG_ISR_STACK_SIZE=8192
