--- a/applications/hello_zephyr/CMakeLists.txt
+++ b/applications/hello_zephyr/CMakeLists.txt
@@ -8,5 +8,7 @@ project(hello_zephyr)
 
 target_sources(app PRIVATE src/main.c)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 # colorized errors
 zephyr_library_compile_options(-fdiagnostics-color=always)
