--- a/applications/hello_zephyr/prj.conf
+++ b/applications/hello_zephyr/prj.conf
@@ -31,7 +31,9 @@ CONFIG_REBOOT=y
 CONFIG_COW=y
 
 #Disable optimizations for easier debug.  Increase stack sizes
-CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
-CONFIG_ISR_STACK_SIZE=8192
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_MAIN_STACK_SIZE=8192
+#CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
+#CONFIG_ISR_STACK_SIZE=8192
+CONFIG_BUILD_OUTPUT_HEX=y
+CONFIG_AARCH64_IMAGE_HEADER=n
